# SDE-simulator

./: .clang-tidy  .gitignore  AppInitializer.cpp  AppInitializer.hpp  CMakeLists.txt  CMakeListsNew.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  README.md  TODO  buildinstructions.txt  main.cpp  refactor.py  vcpkg.json
Model/: CreateProcess.hpp  Utils.hpp
Model/Calculations/: PathEngine.cpp  PathEngine.hpp
Model/Processes/: BM.hpp  GBM.hpp  SDE.cpp  SDE.hpp
Model/SDEs/: BM.hpp  GBM.hpp  SDE.hpp
Presenter/: ButtonPresenter.hpp  ButtonPresenterLink.hpp  DataLink.hpp  IPresenter.hpp  IPresenterComponent.hpp  InputHandler.cpp  InputHandler.hpp  MainPresenter.cpp  MainPresenter.hpp  OutputHandler.cpp  OutputHandler.hpp
Tests/: CMakeLists.txt  TestUtil.hpp  run_tests[1]_include.cmake  test_EngineThreadPool.cpp  test_PathEngine.cpp
View/: CMakeLists.txt  CMakeListssub.txt  MainWindow.cpp  MainWindow.hpp
View/Charts/: ChartManager.cpp  ChartManager.hpp  ChartWidgetManager.cpp  ChartWidgetManager.hpp  PathChart.cpp  PathChart.hpp
View/Inputs/: ButtonWidgetManager.cpp  ButtonWidgetManager.hpp  DefinitionManager.cpp  DefinitionManager.hpp  InputManager.cpp  InputManager.hpp  ParametersManager.cpp  ParametersManager.hpp  ParametersWidget.cpp  ParametersWidget.hpp  ProcessButton.cpp  ProcessButton.hpp  ProcessButtonsManager.cpp  ProcessButtonsManager.hpp  SDEButton.cpp  SDEButtonsManager.hpp
View/Outputs/: OutputManager.cpp  OutputManager.hpp  PathChart.cpp  PathChart.hpp
include/: BasicTypes.hpp  ButtonWidget.hpp  ChartWidget.hpp  Constants.hpp  CreateProcess.hpp  CreateSDE.hpp  DefaultConstants.hpp  MainWindow.hpp  PDFQuery.hpp  PathQuery.hpp  Process.hpp  ProcessData.hpp  ProcessMetaData.hpp  RunApplication.hpp  SDE.hpp  SDEChart.hpp  SDEMetaData.hpp  Util.hpp  Utils.hpp  Wienerprocess.hpp  types.hpp
include/Utils/: StandardSDEs.hpp  Utils.hpp
src/: AppInitializer.cpp  AppInitializer.hpp  ButtonWidget.cpp  ChartWidget.cpp  MainWindow.cpp  Process.cpp  RunApplication.cpp  SDE.cpp  SDE.hpp  SDEChart.cpp  Wienerprocess.cpp  main.cpp
src/GUI/: ButtonWidget.cpp  ButtonWidget.hpp  ChartWidget.cpp  ChartWidget.hpp  MainWindow.cpp  MainWindow.hpp  PathChart.cpp  PathChart.hpp  SDEChart.cpp
src/GUI/Buttons/: ButtonWidgetManager.cpp  ButtonWidgetManager.hpp  ParametersWidget.cpp  ParametersWidget.hpp  SDEButton.cpp  SDEButton.hpp  SDEButtonsManager.cpp  SDEButtonsWidget.cpp  SDEButtonsWidget.hpp
src/Model/: CMakeLists.txt  CreateProcess.hpp  DriftDiffusion.hpp  Job.hpp  ModelUtils.hpp  PDF.hpp  PDFQuery.hpp  PathQuery.hpp  ProcessData.hpp  SolverData.hpp  Transaction.hpp  Utils.hpp
src/Model/Calculations/: EngineThreadPool.cpp  EngineThreadPool.hpp  PathEngine.cpp  PathEngine.hpp  TaskQueue.cpp  TaskQueue.hpp  ThreadPool.cpp  ThreadPool.hpp
src/Presenter/: CMakeLists.txt  IPresenterComponent.hpp  InputHandler.cpp  InputHandler.hpp  InputHandler.inl  JobHandler.cpp  JobHandler.hpp  MainPresenter.cpp  MainPresenter.hpp  OutputHandler.cpp  OutputHandler.hpp
src/SDEs/: BM.cpp  GBM.cpp  SDE.cpp
src/View/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  ViewUtils.hpp
src/View/Inputs/: ActionManager.cpp  ActionManager.hpp  DefinitionManager.cpp  DefinitionManager.hpp  InputDispatcher.cpp  InputDispatcher.hpp  InputManager.cpp  InputManager.hpp  ProcessButton.cpp  ProcessButton.hpp  ProcessButtonsManager.cpp  ProcessButtonsManager.hpp  SettingsManager.cpp  SettingsManager.hpp  SimulationManager.cpp  SimulationManager.hpp
src/View/Outputs/: DistributionChart.cpp  DistributionChart.hpp  OutputDispatcher.cpp  OutputDispatcher.hpp  OutputManager.cpp  OutputManager.hpp  PathChart.cpp  PathChart.hpp  StatusManager.cpp  StatusManager.hpp
